<resources>
    <string name="app_name">Field DataMatics</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="today_visit">Today Visit</string>
    <string name="monthly_visit">Monthy Visit</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>


    <string name="action_settings">Settings</string>
 <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
         AIzaSyAIUaWoVMiS7iEFxlMgTgGIbiWtqs4HU3g
    </string>
    <string name="product_number">Product Number</string>
    <string name="product_description">Description</string>
    <string name="product_category">Category</string>
    <string name="product_category_description">Category Description</string>
    <string name="product_sub_category">Sub Category</string>
    <string name="product_sub_category_desc">Sub Category Description</string>
    <string name="uom">UOM</string>
    <string name="product_pack_size">Pack Size</string>
    <string name="narration">Narration</string>
    <string name="product_supplier_name">Supplier Name</string>
    <string name="product_supplier_description">Supplier Description</string>
    <string name="product_stock_availability">Stock Availability</string>
    <string name="product_usage">Product Usage</string>
    <string name="department">Department</string>
    <string name="product_department_description">Department Description</string>
    <string name="product_section">Section</string>
    <string name="product_section_description">Section Description</string>
    <string name="product_family">Family</string>
    <string name="product_family_desc">Family Description</string>
    <string name="product_sub_family">Sub Family</string>
    <string name="product_sub_family_desc">Sub Family Description</string>
    <string name="done">Done</string>
    <string name="doctor_feedback">Thanks for your Valuable Time, Hope the representative were able to answer the queries appropriately</string>
    <string name="action_introduce_sample">Give Samples</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="sign_lable">Please sign below</string>
    <string name="clear_sign">Clear Sign</string>
    <string name="cancel">Cancel</string>
    <string name="enter_feedback">Enter feedback (max 160 characters)</string>
    <string name="gcm_defaultSenderId">120638460443</string>
    <string name="product_gallery">Product Gallery</string>

    <string-array name="image_extenstions">
        <item>bmp</item>
        <item>cmx</item>
        <item>cod</item>
        <item>gif</item>
        <item>ico</item>
        <item>ief</item>
        <item>jpe</item>
        <item>jpeg</item>
        <item>jpg</item>
        <item>jfif</item>
        <item>pbm</item>
        <item>pgm</item>
        <item>png</item>
        <item>pnm</item>
        <item>ppm</item>
        <item>ras</item>
        <item>rgb</item>
        <item>svg</item>
        <item>tif</item>
        <item>tiff</item>
        <item>xbm</item>
        <item>xpm</item>
        <item>xwd</item>
    </string-array>

    <string-array name="years">
        <item>2015</item>
        <item>2016</item>
    </string-array>

    <string-array name="months">
        <item>JANUARY</item>
        <item>FEBRUARY</item>
        <item>MARCH</item>
        <item>APRIL</item>
        <item>MAY</item>
        <item>JUNE</item>
        <item>JULY</item>
        <item>AUGUST</item>
        <item>SEPTEMBER</item>
        <item>OCTOBER</item>
        <item>NOVEMBER</item>
        <item>DECEMBER</item>
    </string-array>
    <string-array name="sp_categories_schedule_vs_actual">
        <item>Doctor/Pharmacies</item>
        <item>Region</item>
    </string-array>
    <string-array name="sp_sample_category">
        <item>Doctor</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="score_label">Your Score for the month is</string>
    <string name="label_product_doc_loc">Location of Product documents :</string>
    <string name="enter_narration">Enter narration</string>
    <string name="label_samples_given">Samples given</string>
    <string name="version">v2.04</string>
    <string name="pick_directory">Pick Directory</string>


</resources>
