<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="For Doctor/Pharmacy" />

    <Spinner
        android:id="@+id/sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/sp_sample_category"
        android:minHeight="40dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_quantity"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_narration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|top"
            android:hint="@string/enter_narration"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:minHeight="100dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_done"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="5dp"
        android:text="@string/done"
        android:textColor="@android:color/white"
        android:theme="@style/ButtonStyle" />

</LinearLayout>