<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/tab_color">

        <LinearLayout
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/product_number"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/product_detail_label_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="#fff"
                    android:textSize="@dimen/product_detail_label_text_size" />

                <TextView
                    android:id="@+id/tv_product_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="0.6"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/product_detail_label_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/product_detial_margint_top_items"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/product_description"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/product_detail_label_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="#fff"
                    android:textSize="@dimen/product_detail_label_text_size" />

                <TextView
                    android:id="@+id/tv_product_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="0.6"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/product_detail_label_text_size" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/product_detial_margint_top_items"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbl_narration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:singleLine="true"
                    android:text="@string/narration"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/product_detail_label_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="#fff"
                    android:textSize="@dimen/product_detail_label_text_size" />

                <TextView
                    android:id="@+id/tv_product_narration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="0.6"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/product_detail_label_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/product_detial_margint_top_items"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_sample"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/label_samples_given"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/product_detail_label_text_size" />

                <TextView
                    android:id="@+id/tv_dot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="#fff"
                    android:textSize="@dimen/product_detail_label_text_size" />

                <TextView
                    android:id="@+id/tv_product_quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="0.6"
                    android:text="0"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/product_detail_label_text_size" />

            </LinearLayout>

            <TextView
                android:id="@+id/btnMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="more>>"
                android:textColor="#fff" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topLayout"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@color/tab_color"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/tab_layout" />
</RelativeLayout>